# hexchess.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  eslint.config.ts  package.json  pnpm-lock.yaml  rollup.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
pkg/: hexchess.d.ts  hexchess.js  hexchess_bg.js  hexchess_bg.wasm  hexchess_bg.wasm.d.ts  package.json
scripts/: build-old.mjs  build.js  build.mjs  build.ts  check-version.mjs  check-versions.mjs  check-versions.ts  utils.mjs  utils.ts
src/: app.rs  append.ts  bundle.mjs  constants.rs  constants.ts  hexchess.ts  index.ts  lib.rs  macros.rs  main.rs  pkg.mjs  san.ts  structs.rs  types.d.ts  types.ts  utils.ts
src/commands/: all_targets.rs  apply.rs  apply_sequence.rs  check_move.rs  get.rs  get_status.rs  get_targets.rs  mod.rs  parse.rs  targets.rs  test_move.rs
src/game/: board.rs  constants.rs  failure.rs  hexchess.rs  mod.rs  notation.rs  piece.rs
src/hexchess/: hexchess.rs  mod.rs  notation.rs  parse.rs  san.rs  utils.rs
src/pieces/: king.ts  knight.ts  pawn.ts  straight-line.ts
src/wasm/: Cargo.toml  constants.rs  lib.rs  pkg.mjs  prepend.d.ts  prepend.post-build
temp/: lib.rs
temp/hexchess/: hexchess.rs
temp/vitest/: applyMove.spec.ts  hexchess.spec.ts  stringifyHexchess.spec.ts
tests/: apply.spec.ts  parse.test.ts  serialization.spec.ts  targets.spec.ts  types.spec-d.ts
vitest/: apply-notation.spec.ts  apply-sequence.spec.ts  applyMove.spec.ts  applySequence.spec.ts  color.spec.ts  createHexchess.spec.ts  currentMoves.spec.ts  find-king.spec.ts  hexchess.spec.ts  initHexchess.spec.ts  is-checkmate.spec.ts  is-threatened.spec.ts  movesFrom.spec.ts  notation.spec.ts  parse-hexchess.spec.ts  parse-notation.spec.ts  parseHexchess.spec.ts  parseSan.spec.ts  san.spec.ts  serialization.spec.ts  stringifyHexchess.spec.ts  stringifySan.spec.ts  targets.spec.ts  types.spec-d.ts  utils.spec.ts  wasm.spec.ts
(+29 files in other folders)
