[package]
name = "hexchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
exitcode = "1.1.2"
regex = "1.10.3"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.112"
tsify = "0.4.5"
wasm-bindgen = "0.2.87"
