[package]
description = "A Rust / TypeScript library for Gliński's hexagonal chess, and the brain of hexchess.club"
edition = "2021"
homepage = "https://github.com/scottbedard/hexchess.rs"
license = "MIT"
name = "hexchess"
readme = "README.md"
repository = "https://github.com/scottbedard/hexchess.rs"
version = "0.9.0"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
exitcode = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.112"
serde-wasm-bindgen = "0.6.0"
tsify = "0.4.5"
wasm-bindgen = "0.2.87"
js-sys = "0.3.67"
once_cell = "1.19.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
